client/css/app.css
/* make bootstrap smaller */

body {
  font-size: 12px;
}

td.ng-invalid { 
  background-color: #faa;
}

.form-control {
  font-size: 12px;
  padding: 3px 6px;
  height: 24px;
}
.input-lg {
    height: 46px;
    padding: 10px 16px;
    font-size: 18px;
    line-height: 1.3333333;
    border-radius: 6px;
}

.form-group {
  margin-bottom: 8px;
}

.form-horizontal .control-label {
  padding-top: 3px;
}

p {
  margin: 0 0 5px;
}

.panel {
  margin-bottom: 10px;
}
.panel-title {
  font-size: 13px;
}

.btn {
  padding: 3px 6px;
  font-size: 12px;
}

.btn-sm {
  padding: 2px 5px;
}

.btn-xs {
  padding: 0px 5px;
  font-size: 12px;
  line-height: 1.5;
  border-radius: 3px;
}

.btn-lg {
    padding: 10px 16px;
    font-size: 18px;
}

legend {
  font-size: 18px;
  margin-bottom: 10px;
}

.input-group-addon {
  padding: 3px 6px;
  font-size: 12px;
}

label {
  margin-bottom: 0;
}

.nav>li>a {
  padding: 5px 10px;
}
.navbar {
  min-height: 30px;
}

.panel-heading {
  padding: 5px 8px;
}

.form-control-static {
  padding-top: 2px;
  padding-bottom: 2px;
}

.breadcrumb {
  padding: 5px 10px;
  margin-bottom: 10px
}

.list-group-item {
  padding: 5px 10px;
}

h4 {
  font-size: 16px;
}

.dropdown-menu {
  min-width: 100px;
  font-size: 12px;
  padding: 2px 0;
}

.dropdown-menu>li>a {
  padding: 3px 10px;
}

.table {
  margin-bottom: 10px;
}
.table-condensed>tbody>tr>td {
  padding: 3px;
}

.input-sm {
  height: 24px;
  padding: 3px 5px;
  font-size: 12px;
}

select.input-sm {
  height: 24px;
  line-height: 24px;
}

.alert {
  padding: 8px;
  margin-bottom: 10px;
}

ol, ul {
  margin-bottom: 5px;
}

/* we autosize textareas with a directive */

textarea {
	resize: none;
}



.indicator-level-1, .indicator-level-2, .indicator-level-3 {
	border: solid #ccc;
	border-width: 1px;
	padding: 5px 0 0 5px;
	border-radius: 3px;
	margin-bottom: 5px;
	margin-right: 5px;
}

.indicator-header {
	margin-bottom: 5px;
  margin-right: 10px;
}

.indicator-level-1 {
	margin-left: 0px;
  margin-right: 10px;
	background-color: white;
}

.indicator-level-2 {
	margin-left: 20px;
  margin-right: 10px;
	background-color: #f8f8f8;

}

.indicator-level-3 {
	margin-left: 20px;
	background-color: #f0f0f0;
}

.indicator-level-3 .pull-right {
  margin: 0 10px;
  position: relative;
  top: -3px;
}

.input-xs {
    height: 22px;
    padding: 5px 5px;
    font-size: 12px;
    line-height: 1.5;
    border-radius: 3px;
}



/*.form-group .help-block {
  display: none;
}

.form-group.has-error .help-block {
  display: block;
}
*/
.invert.input-group .form-control {
	border-radius: 4px;
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
}

.input-group-btn.square button {
	border-radius: 0;
	border-right-width: 0;
}

  table.project-reporting {
    font-size: 12px;
  }

  #reporting label {
    font-weight: normal;
  }

  table.project-reporting .section, table.project-reporting .section a {
    color: black;
    text-decoration: underline;
    font-weight: bold;
  }

  table.project-reporting .indent1 {
    padding-left: 25px !important;
  }

  table.project-reporting .indent2 {
    padding-left: 50px !important;
  }
  table.project-reporting .indent3 {
    padding-left: 75px !important;
  }





      .panel-collapse>.list-group .list-group-item:first-child {border-top-right-radius: 0;border-top-left-radius: 0;}
      .panel-collapse>.list-group .list-group-item {border-width: 1px 0;}
      .panel-collapse>.list-group {margin-bottom: 0;}
      .panel-collapse .list-group-item {border-radius:0;}

      .panel-collapse .list-group .list-group {margin: 0;margin-top: 10px;}
      .panel-collapse .list-group-item li.list-group-item {margin: 0 -15px;border-top: 1px solid #ddd !important;border-bottom: 0;padding-left: 30px;}
      .panel-collapse .list-group-item li.list-group-item:last-child {padding-bottom: 0;}

      .panel-collapse div.list-group div.list-group{margin: 0;}
      .panel-collapse div.list-group .list-group a.list-group-item {border-top: 1px solid #ddd !important;border-bottom: 0;padding-left: 30px;}
      .panel-collapse .list-group-item li.list-group-item {border-top: 1px solid #DDD !important;}


.ta-toolbar {
  display: none;
}

.ta-toolbar.focussed {
  display: block;
}

.ta-editor.ta-html, .ta-scroll-window.form-control {
  min-height: 0;
  
}
.ta-scroll-window > .ta-bind {
  min-height: 0;
}


.show-on-hover {
  height: 10px;
  /*text-align: center;*/
  overflow: hidden;
  transition: height .5s;
}

.show-on-hover button {
  margin: 10px 5px;
  opacity: 0;
  display: inline;
  transition: opacity .25s;
}

.show-on-hover:hover {
  height: 50px;
  transition: height .5s;
}

.show-on-hover:hover button {
  opacity: 1;
  transition: opacity .25s;
  transition-delay: .25s
}

report-preview .table {
  margin-bottom: 0;
}


.print { display: none;}
.main-content { padding-top: 45px; }


ul>.onrollover {
  display: none;
}
ul:hover>.onrollover {
  display: list-item;
}

@media print {
  .print { display: block; }
  .noprint { display: none; }
  .print-only { display: block !important; }
  .print-full-width { width: 100% !important; }

  .main-content { padding-top: 0; }
  .c3-tooltip-container { display: none !important; }


  .htNumeric {
    color:white !important;
    font-size: 0;
    
  }

}


.indent1 { padding-left: 20px !important; }
.indent2 { padding-left: 40px !important; }
.indent3 { padding-left: 60px !important; }
.indent4 { padding-left: 80px !important; }
.indent5 { padding-left: 100px !important; }


  .table-raw-data th {
    width: 20%;
  }

  .remove-action {
    display: none;
  }

  li:hover > .remove-action, td:hover > .remove-action {
    display: inline;
    cursor: hand;
  }
  .table-raw-data span[contenteditable] {
    display: inline-block;
    min-width: 100px;
    min-height: 12px;
  }

/*  .table-raw-data td:hover span[contenteditable] {
    border: 1px dashed #ccc;
    margin: 3px;
  }*/


.formula {
  border-style: solid;
  border-width: 0 0 0 5px;
  border-color: #CCC;

}

.formula.error {
  border-color: darkred;
}


.form-control.ng-invalid.ng-touched {
  border-color: #a94442;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
}

.form-control-static {
  min-height: 22px;
 }

 ul {
  padding-left: 20px;
}

  .data-grid th {
    text-align: center;
    vertical-align: middle !important;
  }



  .btn-group-xxs>.btn, .btn-xxs {
    padding: 1px 5px;
    font-size: 10px;
    line-height: 1.3;
    border-radius: 3px;
}



      body {
        background-color: #EEE;
      }   
  
      #load-container{
        position: absolute;
        top: 50%;
        margin-top: -200px;/* half of #content height*/
        left: 0;
        width: 100%;
      }

      #load-content {
        width: 624px;
        margin-left: auto;
        margin-right: auto;
        height: 395px;
        text-align: center;
        background-color: #FFF;
        border: 1px solid #CCC;
        border-radius: 5px;
        padding: 20px;
      }

      #load-content h3 {
        margin-top: 10px;
      }
      
      #load-content img {
        width: 250px;
        margin-bottom: 10px;
        transition: width .2s;
      }

      #load-content .progress {
        width: 80%;
        margin: auto;
      }

#version {
  position: absolute;
  bottom: 5px;
  right: 5px;
}

.handle {
  text-align: center !important;
  vertical-align: middle !important;
}

ul[ng-sortable] {
  padding-left: 3px;
  list-style-type: none;
}

.dragging .drag-destination {
  min-height: 25px;
}




ul[ng-sortable] i.fa.fa-bars {
  padding-right: 3px;
}

ul[ng-sortable] li *, i.fa.fa-bars {
  cursor: pointer;
}

.sortable-ghost {
  opacity: .3;
}

.sortable-label-list {
  padding: 0 2px;
}


.navbar-toggle {
  padding: 4px;
  margin: 3px;
}



.indicator-panel {
  display: inline-block;
  vertical-align: top
}


@media (max-width: 800px) {
  .indicator-panel {
    display: block;
  }
}

@media (min-width: 800px) and (max-width: 1000px) {
  .indicator-panel {
    width: 32%;
    margin-left: 1.5%;
  }

  .indicator-panel:nth-child(3n+1) {
    margin-left: 0;
  }
}

@media (min-width: 1000px) and (max-width: 1200px) {
  .indicator-panel {
    width: 24%;
    margin-left: 1.33%;
  }

  .indicator-panel:nth-child(4n+1) {
    margin-left: 0;
  }
}


@media (min-width: 1200px) and (max-width: 1400px) {
  .indicator-panel {
    width: 19%;
    margin-left: 1.25%;
  }

  .indicator-panel:nth-child(5n+1) {
    margin-left: 0;
  }
}

@media (min-width: 1400px) {
  .indicator-panel {
    width: 16%;
    margin-left: 0.66%;
  }

  .indicator-panel:nth-child(6n+1) {
    margin-left: 0;
  }
}



.indicator-panel .panel-body {
  padding: 10px 10px 30px 10px;
  position: relative;
}

.indicator-panel .panel-body a {
  margin-top: 5px;
  position: absolute;
  bottom: 10px;
  right: 10px;
}




.partition-table-item {
  /* from well */
  min-height: 20px;
  padding: 19px;
  margin-bottom: 20px;
  background-color: white;
  background-color: #fcfcfc;
  border: 1px solid #e3e3e3;
  border-radius: 4px;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.05);

  /* from doc */
  text-align: center;
  padding: 5px;
  /*float: left;*/
  vertical-align: middle;
  margin-right: 15px;
  font-weight: normal !important;
}

.partition-table-item table {
  background-color: #e8e8e8;
  color: #444;
  border-color: #ccc !important;
}

.partition-table-item table td {
  border-color: #ccc !important;
  border-bottom-width: 1px !important;
  padding: 4px 8px !important;
}

.partition-table-item table td.data-field {
  background-color: white;
}

.partition-order {
  border: 1px solid #ccc;
  background-color: #e8e8e8;
  color: #444;
}

.partition-order td {
  border: 1px solid #ccc;
  padding: 4px 8px;  
}

.partition-order td.data-field {
  border: 1px solid #ccc;
  padding: 4px 8px;  
  background-color: white;
}

.fa-sort {
  cursor: pointer;
}

.pdf-export {
  width: 180px;
}


.indicator-handle {
  cursor: pointer;
}




#input-list table {
  table-layout: fixed;
}
  
#input-list #table1-container {
  float: left;
  width: 15%;
}

#input-list #table2-container {
  overflow-x: auto;
  width: 85%;
}

#input-list #table2 {
  width: auto;
  min-width: 100%;
}

#input-list .headerField {
  min-width: 100px;
  width: 100%;
  height: 46px;
  line-height: 46px;
  overflow: hidden;
  text-align: center;
}

#input-list .headerField div {
  display: inline-block;
  vertical-align: middle;
  line-height: 14px;
}

#input-list .bodyField { height: 20px; text-align: center; overflow: hidden; }
#input-list .bodyField a { display: block; width: 100%;}

#input-list .bodyField2 { height: 24px; text-align: center; overflow: hidden; }


  .modal-header {
    padding: 7px 15px;
  }

  .modal-header h3 {
    font-size: 18px;
  }

